# RayTracer-Project

./: .gitignore  CMakeLists.txt  main.cpp
include/: Camera.h  GeomSphere.h  GeomTriangle.h  GeometryBase.h  GlossyMaterial.h  Image.h  Intersection.h  MaterialBase.h  ModelBase.h  Obj.h  Ray.h  RayTracer.h  Scene.h  Screenshot.h  Sphere.h  Square.h  Utility.h
src/: Camera.cpp  RayTracer.cpp  Scene.cpp
src/geometries/: GeomSphere.cpp  GeomTriangle.cpp
src/materials/: GlossyMaterial.cpp
src/models/: Sphere.cpp  Square.cpp  Tetrahedron.cpp
src/scenes/: open_sky.inl  sphere_in_box.inl  teapot_in_box.inl
